<resources>
    <string name="app_name">腳底按摩</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="sign_in">登入</string>
    <string name="sign_up">註冊</string>
    <string name="password_too_short">密碼太短</string>
    <string name="incorrect_password">密碼錯誤</string>
    <string name="field_required">必填</string>
    <string name="incorrect_account">無此帳號</string>
    <string name="vertical_bar">|</string>
    <string name="forgot_password">忘記密碼</string>

    <!-- Strings related to main -->
    <string name="member">會員資訊</string>
    <string name="health">健康資訊</string>
    <string name="diagnosis">診斷</string>
    <string name="name">名字</string>

    <!-- Strings related to diagnosis -->
    <string name="painful">痛</string>
    <string name="very_painful">很痛</string>
    <string name="start">開始</string>
    <string name="finish">結束</string>

    <!-- Strings related to member -->
    <string name="member_information">個人資訊</string>
    <string name="age">年齡</string>
    <string name="gender">性別</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="diagnosis_history_record">診斷歷史記錄</string>
    <string name="record">診斷記錄</string>
    <string name="write_questionnaire">填寫問卷</string>
    <string name="modify">修改</string>
    <string name="modify_information">修改</string>
    <string name="cancel_modify">取消修改</string>
    <string name="question">問題</string>

    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="confirm">確認</string>
    <string name="next">下一個</string>
    <string name="cancel">取消</string>
    <string name="a_little_painful">一點痛</string>
</resources>
